<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">Current Weather</string>
    <string name="title_activity_settings">Settings</string>

    <string name="pref_unit_label">Unit</string>
    <string name="pref_unit_key" translatable="false">units</string>
    <string name="pref_unit_metric" translatable="false">metric</string>
    <string name="pref_unit_imperial" translatable="false">imperial</string>

    <!-- Temperature formats -->
    <string name="format_temperature"><xliff:g id="temp">%1.0f</xliff:g>\u00B0</string>

    <!-- Windspeed formats -->
    <!-- Wind in mph [CHAR LIMIT=25] -->
    <string name="format_wind_mph">
        <xliff:g id="speed">%1$1.0f</xliff:g> mph <xliff:g id="direction">%2$s</xliff:g>
    </string>

    <!-- Wind in kph [CHAR LIMIT=25] -->
    <string name="format_wind_kmh">
        <xliff:g id="speed">%1$1.0f</xliff:g> km/h <xliff:g id="direction">%2$s</xliff:g>
    </string>

    <!-- Pressure format CHAR LIMIT=25] -->
    <string name="format_pressure">Pressure: <xliff:g id="pressure">%1.0f</xliff:g> hPa</string>

    <!-- Humidity format CHAR LIMIT=25]-->
    <string name="format_humidity">Humidity: <xliff:g id="humidity">%1.0f</xliff:g> %%</string>
    <string name="inch">in</string>
    <string name="millimeter">mm</string>

    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="error_city_not_found">City not found</string>
    <string name="warning_offline">You\'re offline</string>
    <string name="dialog_new_city_title">City name</string>
    <string name="dialog_new_city_ok">OK</string>
    <string name="dialog_new_city_cancel">Cancel</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="description">Description</string>
    <string name="hour">Hour</string>
    <string name="date">Date</string>
    <string name="day">Day</string>
    <string name="temp_min">Temp Min</string>
    <string name="temp">Temp</string>
    <string name="temp_max">Temp Max</string>
    <string name="rain">Rain</string>
    <string name="snow">Snow</string>
    <string name="wind">Wind</string>
    <string name="clouds">Clouds</string>
    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="tek_systems">TEK Systems</string>
    <string name="current_weather">Current Weather</string>
    <string name="measured_at">Measured at:</string>
    <string name="offline_first_time">You\'re offline. Connect and swipe!</string>

</resources>
