<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="test.app.teksysweather.view.MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/weatherLocationContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/weatherCityTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_end"
                    android:hint="@string/city"/>

                <TextView
                    android:id="@+id/weatherCountryTv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/country"/>
            </LinearLayout>

            <TextView
                android:id="@+id/weatherDescriptionTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/description"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/weatherDateIconDescrContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_end"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/weatherHourTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/hour"/>

                <TextView
                    android:id="@+id/weatherDateTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/date"/>

                <TextView
                    android:id="@+id/weatherDayTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/day"/>


            </LinearLayout>

            <FrameLayout
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/colorAccent"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_end"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/weatherIcon"
                    android:layout_width="@dimen/icon_width"
                    android:layout_height="@dimen/icon_height"
                    android:contentDescription="weather icon"/>

                <LinearLayout
                    android:id="@+id/weatherTempContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/weatherTempMinTv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/temp_min"/>

                    <TextView
                        android:id="@+id/weatherTempTv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/temp"/>

                    <TextView
                        android:id="@+id/weatherTempMaxTv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/temp_max"/>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/weatherRainContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/weatherRainTv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/rain"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/weatherSnowContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/weatherSnowTv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/snow"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/weatherWindContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/weatherWindTv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/wind"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/weatherCloudsContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/weatherCloudsTv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/clouds"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/weatherHumidityContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/weatherHumidityTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/humidity"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/weatherPressureContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/weatherPressureTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/pressure"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/weatherSunriseContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/weatherSunriseTv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/sunrise"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/weatherSunsetContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/weatherSunsetTv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/sunset"/>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/weatherNewCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="20dp"
        android:elevation="10dp"
        app:srcCompat="@drawable/ic_search_black_24dp"
        app:layout_anchorGravity="bottom|end|right"/>

</android.support.design.widget.CoordinatorLayout>
